@startuml 01-di
namespace backend {
  class Client {
    - backend Storer
    + Insert(k string, v string) error
    + FindByID(k string) (string, error)

  }
  class LevelDB {
    - mdb *memdb.DB
    + Put(k []byte, v []byte) error
    + Get(k []byte) ([]byte, error)    
  }
  interface Storer  {
    + Put(k []byte, v []byte) error
    + Get(k []byte) ([]byte, error)
  }
}

backend.Client --> backend.Storer : uses
backend.Storer <|-- backend.LevelDB : implements

@enduml
